# norien

./: .env.example  .gitattributes  .gitignore  .railwayignore  PUBLISHING.md  README.md  drizzle.config.ts  install.ps1  install.sh  nixpacks.toml  norien.policy.json  package-lock.json  package.json  phase8.md  pnpm-workspace.yaml  railway.json  tsconfig.json  vitest.config.ts
.norien/: daemon.json
apps/app/: next.config.mjs  package.json
apps/docs/: next.config.mjs  package.json  tsconfig.json
apps/marketing/: next.config.mjs  package.json
drizzle/: 0000_bootstrap.sql  0001_init.sql  0002_runtime.sql  0003_tool_marketplace.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
examples/python/: quickstart.py
examples/tools/: README.md
examples/typescript/: quickstart.ts
openapi/: openapi.json
public/: index.html
scripts/: make-banner.mjs  make-logo.mjs  prepare.mjs
sdk-python/: README.md  pyproject.toml
sdk-python/norien/: __init__.py  client.py  errors.py
src/: app.ts  server.ts
src/config/: constants.ts  env.ts
src/core/: cache.ts  errors.ts  events.ts  pagination.ts  principal.ts  provider-client.ts
src/db/: client.ts  fixtures.ts  migrate.ts  seed.ts
tests/: api.test.ts  cli-tools.test.ts  cli.test.ts  external-live.test.ts  helpers.ts  product-surface.test.ts  provider-core.test.ts  runtime-execution.test.ts  runtime.test.ts  sdk.test.ts  source.test.ts  tool-marketplace.test.ts  tools.test.ts
web/: README.md  next.config.mjs  package.json  tsconfig.json
(+203 files in other folders)
